# pyssp_interface

./: .gitignore  .gitmodules  AGENTS.md  README.md  conftest.py  pyproject.toml  requirements-dev.txt
docs/: getting_started.md  index.md
docs/dev/: architecture.md  code_guidelines.md  implementation_plan.md
src/pyssp_interface/: __init__.py  __main__.py  _vendor.py  app.py  diagram_controller.py  diagram_view.py  main_window.py  resource_controller.py
src/pyssp_interface/dialogs/: resource_dialogs.py
src/pyssp_interface/presentation/: __init__.py  formatters.py  resource_plans.py  selection_plans.py
src/pyssp_interface/services/: __init__.py  project_service.py
src/pyssp_interface/state/: __init__.py  diagram_layout.py  project_index.py  project_state.py
src/pyssp_interface/widgets/: __init__.py  project_tree.py  table_helpers.py
tests/: conftest.py
tests/unit/: test_app.py  test_diagram_controller.py  test_diagram_layout.py  test_project_service.py  test_resource_controller.py  test_resource_plans.py  test_selection_plans.py
