[build-system]
requires = ["setuptools>=69", "wheel>=0.43"]
build-backend = "setuptools.build_meta"

[project]
name = "pyssp-interface"
version = "0.1.0"
description = "Desktop application for building and working with SSP archives and FMUs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.7",
  "lxml",
  "pint",
  "xmlschema",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
pyssp-interface = "pyssp_interface.app:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

